syntax = "proto3";
option csharp_namespace = "CecoChat.Contracts.State";
package CecoChat.Contracts.State;
import "google/protobuf/timestamp.proto";
import "State/ChatState.proto";

service State {
  rpc GetChats(GetChatsRequest) returns (GetChatsResponse);
}

message GetChatsRequest {
  google.protobuf.Timestamp newer_than = 1;
}

message GetChatsResponse {
  repeated ChatState chats = 1;
}
